objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>MBC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MBC = MassBio Association. When box is checked, the Account is a Colpitts Client or Prospect.</inlineHelpText>
        <label>MBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COLA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if client contract includes a Cost of Living Adjustment (COLA) clause.</inlineHelpText>
        <label>COLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkmark if the company books travel tied to Meetings &amp; Events.</description>
        <label>M&amp;E Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel Payment Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company Card</fullName>
                </value>
                <value>
                    <fullName>CSI Card</fullName>
                </value>
                <value>
                    <fullName>Traveler Cards (Company)</fullName>
                </value>
                <value>
                    <fullName>Traveler Cards (Personal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TROOP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for Meeting &amp; Events Tool - TROOP</description>
        <inlineHelpText>Check when TROOP (part of Avenir) is Implemented</inlineHelpText>
        <label>TROOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dinova__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dinova</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Company has global needs.</inlineHelpText>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RegionG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fairfly__c</fullName>
        <label>Price Assurance Air (Oversee)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_IRD__c</fullName>
        <label>Fee - Intl Rate Desk</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_Feed__c</fullName>
        <label>HR Feed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <label>Lost To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>AdTrav</fullName>
                </value>
                <value>
                    <fullName>Altour (prev Advantage)</fullName>
                </value>
                <value>
                    <fullName>American Express - Affiliate</fullName>
                </value>
                <value>
                    <fullName>American Express - Corp</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Ascendas (prev Vanguard)</fullName>
                </value>
                <value>
                    <fullName>Atlas</fullName>
                </value>
                <value>
                    <fullName>Austin Travel</fullName>
                </value>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>Balboa Travel</fullName>
                </value>
                <value>
                    <fullName>Bannockburn Travel</fullName>
                </value>
                <value>
                    <fullName>BCD - Affiliate</fullName>
                </value>
                <value>
                    <fullName>BCD - Corporate</fullName>
                </value>
                <value>
                    <fullName>BCD - World Travel Partners</fullName>
                </value>
                <value>
                    <fullName>Best Travel</fullName>
                </value>
                <value>
                    <fullName>BTI</fullName>
                </value>
                <value>
                    <fullName>Cain Travel</fullName>
                </value>
                <value>
                    <fullName>Carlson</fullName>
                </value>
                <value>
                    <fullName>Carrousel</fullName>
                </value>
                <value>
                    <fullName>Casto Travel</fullName>
                </value>
                <value>
                    <fullName>Christopherson Travel</fullName>
                </value>
                <value>
                    <fullName>Corporate Travel Management (CTM)</fullName>
                </value>
                <value>
                    <fullName>Corporate Travel Solutions</fullName>
                </value>
                <value>
                    <fullName>CTD</fullName>
                </value>
                <value>
                    <fullName>CWT - Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TripBam__c</fullName>
        <description>Enter which version of TripBam this customer has implemented.</description>
        <label>Price Assurance Hotel (TripBam)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Days__c</fullName>
        <label># Car Days (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical__c</fullName>
        <inlineHelpText>Special field created for Colpitts</inlineHelpText>
        <label>Clinical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Client</fullName>
                </value>
                <value>
                    <fullName>Clinical Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Limo__c</fullName>
        <label>Fee - Limo</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Void__c</fullName>
        <label>Fee - Void</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Spend__c</fullName>
        <label>Car Spend (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOST_Year__c</fullName>
        <label>LOST Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ops_Owner__c</fullName>
        <label>Ops Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allison Lamb</fullName>
                </value>
                <value>
                    <fullName>Amy Beighey</fullName>
                </value>
                <value>
                    <fullName>Andrea Ewart</fullName>
                </value>
                <value>
                    <fullName>Barton Cornejo</fullName>
                </value>
                <value>
                    <fullName>Bethany Courchene</fullName>
                </value>
                <value>
                    <fullName>Bonnie Casey</fullName>
                </value>
                <value>
                    <fullName>Brad Williams</fullName>
                </value>
                <value>
                    <fullName>Brenda Chaimowitz</fullName>
                </value>
                <value>
                    <fullName>Brenda Thrasher</fullName>
                </value>
                <value>
                    <fullName>Charles Brigolin</fullName>
                </value>
                <value>
                    <fullName>Christine Berbaum</fullName>
                </value>
                <value>
                    <fullName>Cindy Di Stefano</fullName>
                </value>
                <value>
                    <fullName>Claire Jacobs</fullName>
                </value>
                <value>
                    <fullName>Corporate_UK@dt.com</fullName>
                </value>
                <value>
                    <fullName>Daniel Chicoine</fullName>
                </value>
                <value>
                    <fullName>Debbie Landers</fullName>
                </value>
                <value>
                    <fullName>Dina Catania</fullName>
                </value>
                <value>
                    <fullName>Direct Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Elisha Wold</fullName>
                </value>
                <value>
                    <fullName>Erika Kreis</fullName>
                </value>
                <value>
                    <fullName>Eve Ryan</fullName>
                </value>
                <value>
                    <fullName>Gayle Campbell</fullName>
                </value>
                <value>
                    <fullName>Heather Miller</fullName>
                </value>
                <value>
                    <fullName>Holly Lee</fullName>
                </value>
                <value>
                    <fullName>Jackie Weisenmiller</fullName>
                </value>
                <value>
                    <fullName>Jane Jones</fullName>
                </value>
                <value>
                    <fullName>Janet Cacioppo</fullName>
                </value>
                <value>
                    <fullName>Jason Kaufman</fullName>
                </value>
                <value>
                    <fullName>Jeanne Johnson</fullName>
                </value>
                <value>
                    <fullName>Jennifer DeFuria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rocketrip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if this company subscribes to Rocketrip.</description>
        <inlineHelpText>Select if this company subscribes to Rocketrip.</inlineHelpText>
        <label>Rocketrip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tripkicks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tripkicks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COLA_Index__c</fullName>
        <description>Select the COLA clause noted in the contract.</description>
        <inlineHelpText>Select the COLA clause noted in the contract.</inlineHelpText>
        <label>COLA Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECI (Annual)</fullName>
                </value>
                <value>
                    <fullName>CPI (Annual)</fullName>
                </value>
                <value>
                    <fullName>Standard 3% Flat Increase</fullName>
                </value>
                <value>
                    <fullName>Standard 5% Flat Increase</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Online__c</fullName>
        <label>Fee - Online</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Refund__c</fullName>
        <label>Fee - Refund</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GDS_System__c</fullName>
        <label>GDS System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amadeus</fullName>
                </value>
                <value>
                    <fullName>Apollo</fullName>
                </value>
                <value>
                    <fullName>Sabre</fullName>
                </value>
                <value>
                    <fullName>Travelport</fullName>
                </value>
                <value>
                    <fullName>WorldSpan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOST_Notes__c</fullName>
        <label>LOST Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MICE_Owner__c</fullName>
        <label>M&amp;E Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <label>Mobile App</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI On The Go</fullName>
                </value>
                <value>
                    <fullName>Concur Mobile</fullName>
                </value>
                <value>
                    <fullName>Direct2U</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>Zeno/Serko</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <inlineHelpText>The first two digits designate the economic sector, the third digit designates the subsector, the fourth digit designates the industry group, the fifth digit designates the NAICS industry, and the sixth digit designates the national industry.</inlineHelpText>
        <label>NAICS Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Coll__c</fullName>
        <label>Other Collaboration Tool or Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIBT_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIBT Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Consent__c</fullName>
        <description>Data Processing Agreement Consent.  Did someone at the organization agree to Direct Travel&apos;s DPA?  Note - this was an initiative started on 5/25/18 and all new agreements written after that will include the DPA.</description>
        <inlineHelpText>Data Processing Agreement Consent.  Did someone at the organization agree to Direct Travel&apos;s DPA?  Note - this was an initiative started on 5/25/18 and all new agreements written after that will include the DPA.</inlineHelpText>
        <label>DPA Consent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consent Received</fullName>
                </value>
                <value>
                    <fullName>Consent Denied</fullName>
                </value>
                <value>
                    <fullName>None - Awaiting Consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Leisure__c</fullName>
        <label>Fee - Leisure</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Spend__c</fullName>
        <label>Hotel Spend (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOST_Reason__c</fullName>
        <label>LOST Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>DT Resignation - No Bid</fullName>
                </value>
                <value>
                    <fullName>GPO Sourced</fullName>
                </value>
                <value>
                    <fullName>Not Minority Owned</fullName>
                </value>
                <value>
                    <fullName>No travel / no volume</fullName>
                </value>
                <value>
                    <fullName>Online booking (Direct)</fullName>
                </value>
                <value>
                    <fullName>Other TMC Relationship</fullName>
                </value>
                <value>
                    <fullName>Price / Transaction Fees</fullName>
                </value>
                <value>
                    <fullName>Released from Contract</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
                <value>
                    <fullName>Sold, but Never Implemented</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Went out of business</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATP_Domestic__c</fullName>
        <label>ATP - Domestic</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Days_YTD__c</fullName>
        <label># Car Days (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Since__c</fullName>
        <inlineHelpText>This is the first day the client considers us their TMC (i.e., the first day they started calling us and/or the first day they can ticket with us).</inlineHelpText>
        <label>Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Domestic__c</fullName>
        <label>Fee - Domestic</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Exchange__c</fullName>
        <label>Fee - Exchange</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights__c</fullName>
        <label># Hotel Nights (Prev Yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBT_Adoption__c</fullName>
        <label>OBT Adoption</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OMNIA_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this company a member of OMNIA Partners (formerly Corporate United) affiliation?</inlineHelpText>
        <label>OMNIA Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Tool__c</fullName>
        <inlineHelpText>All accounts should have one profile system.</inlineHelpText>
        <label>Profile Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>GetThere</fullName>
                </value>
                <value>
                    <fullName>Certify</fullName>
                </value>
                <value>
                    <fullName>Cytric</fullName>
                </value>
                <value>
                    <fullName>Sureware</fullName>
                </value>
                <value>
                    <fullName>E-Profile</fullName>
                </value>
                <value>
                    <fullName>Agency Technology</fullName>
                </value>
                <value>
                    <fullName>GDS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Zeno/Serko</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Strategic Named Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Needs__c</fullName>
        <label>Travel Needs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Travel</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Global Travel</fullName>
                </value>
                <value>
                    <fullName>Group Air</fullName>
                </value>
                <value>
                    <fullName>Meetings &amp; Events</fullName>
                </value>
                <value>
                    <fullName>Spotnana</fullName>
                </value>
                <value>
                    <fullName>Troop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Contracts__c</fullName>
        <label>Air Contract(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AC – Access</fullName>
                </value>
                <value>
                    <fullName>AC – Corporate Preferred</fullName>
                </value>
                <value>
                    <fullName>AeroMexico</fullName>
                </value>
                <value>
                    <fullName>Air Canada</fullName>
                </value>
                <value>
                    <fullName>Air France</fullName>
                </value>
                <value>
                    <fullName>Air North</fullName>
                </value>
                <value>
                    <fullName>AirTran/Southwest</fullName>
                </value>
                <value>
                    <fullName>Alaska Air</fullName>
                </value>
                <value>
                    <fullName>American Air</fullName>
                </value>
                <value>
                    <fullName>ANA All Nippon</fullName>
                </value>
                <value>
                    <fullName>Asiana Airlines</fullName>
                </value>
                <value>
                    <fullName>Batik Air</fullName>
                </value>
                <value>
                    <fullName>British Air</fullName>
                </value>
                <value>
                    <fullName>Calm Air</fullName>
                </value>
                <value>
                    <fullName>Cathay Pacific</fullName>
                </value>
                <value>
                    <fullName>China Air</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Emirates</fullName>
                </value>
                <value>
                    <fullName>Etihad</fullName>
                </value>
                <value>
                    <fullName>EVA Air</fullName>
                </value>
                <value>
                    <fullName>Frontier</fullName>
                </value>
                <value>
                    <fullName>Japan Airlines</fullName>
                </value>
                <value>
                    <fullName>JetBlue</fullName>
                </value>
                <value>
                    <fullName>KLM</fullName>
                </value>
                <value>
                    <fullName>Korean Air</fullName>
                </value>
                <value>
                    <fullName>Lufthansa</fullName>
                </value>
                <value>
                    <fullName>Malaysia Air</fullName>
                </value>
                <value>
                    <fullName>Oneworld</fullName>
                </value>
                <value>
                    <fullName>Philippine Airlines</fullName>
                </value>
                <value>
                    <fullName>Porter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Point of Sale</fullName>
                </value>
                <value>
                    <fullName>Monthly Invoice - Credit Card</fullName>
                </value>
                <value>
                    <fullName>Monthly Invoice - Payable</fullName>
                </value>
                <value>
                    <fullName>Monthly Invoice - Bulk Fee</fullName>
                </value>
                <value>
                    <fullName>Quarterly Invoice - Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <inlineHelpText>Include details on fee discussions - including programming fees, maintenance fees, bespoke reporting fees, soft dollar payouts, etc.</inlineHelpText>
        <label>Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Car_Spend_YTD__c</fullName>
        <label>Car Spend (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Suppliers__c</fullName>
        <label>Car Supplier(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage Car</fullName>
                </value>
                <value>
                    <fullName>Alamo</fullName>
                </value>
                <value>
                    <fullName>Avis</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Hertz</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Sixt</fullName>
                </value>
                <value>
                    <fullName>Thrifty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>No Formal Contract</fullName>
                </value>
                <value>
                    <fullName>Transaction Agreement</fullName>
                </value>
                <value>
                    <fullName>N/A - Ties to Parent Account Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>